# SolveCad

./: application.h  glarea_fragment.glsl  glarea_fragment_es.glsl  glarea_vertex_es.glsl  glwindow  glwindow.cphp  glwindow.h  knot.cpp  main.cpp  manifold.h  meson.build  org.SolveCad.SolveCad.metainfo.xml  resource.xml  resources.c  window.cmb  window.css  window.ui
canvas/: appearance.cpp  appearance.hpp  background_renderer.cpp  base_renderer.cpp  box_selection.cpp  canvas.cpp  canvas.hpp  chunk.cpp  chunk.hpp  face_renderer.cpp  gl_util.cpp  glyph_3d_renderer.cpp  glyph_renderer.cpp  icanvas.hpp  icon_renderer.cpp  icon_texture_id.hpp  icon_texture_map.cpp  line_renderer.cpp  picture_renderer.cpp  picture_renderer.hpp  selectable_ref.hpp  selection_texture_renderer.cpp
document/entity/: entity_and_point.cpp  entity_and_point.hpp
icons/scalable/actions/: image.cvg
render/: gl3shader.cph  gl3shader.h  render.cpp  render.h  rendergl3.cph
util/: dsc.h  import.hpp  picture_data.hpp  util.no  utils.h  uuid.hpp
